fix geth rpc urls issue

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "deploy": "node -r esm deploy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "melkorCba",
